improvement(tmux): tweaks(key) for panes movement

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,6 +15,15 @@ bind-key b copy-mode
 bind-key B paste-buffer
 bind-key -T copy-mode-vi C-c send -X copy-pipe-and-cancel "xsel -i --clipboard"
 
+bind-key tab last-window
+# vi-like movement between panes
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+bind-key g split-window -h
+bind-key G split-window
 
 
 # set-option -g status-position top
