--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,14 @@
 set -sg escape-time 0
 
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 set -g status-bg black
 set -g status-fg white
+
+# change prefix key
+# set-option -g prefix F2
+# set-option -g prefix C-t
 
 # mouse and copy to clipboard
 # solution 1
