--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,6 +16,7 @@ set -g status-fg white
 # set-option -s set-clipboard off
 # bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
 # solution 2
+setw -g mode-keys vi
 bind-key b copy-mode
 bind-key B paste-buffer
 bind-key -T copy-mode-vi C-c send -X copy-pipe-and-cancel "xsel -i --clipboard"
