--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,8 +7,10 @@ set -g status-bg black
 set -g status-fg white
 
 # change prefix key
-# set-option -g prefix F2
+set-option -g prefix F1
+# set-option -g prefix F1
 # set-option -g prefix C-t
+# set-option -g prefix C-v
 
 # mouse and copy to clipboard
 # solution 1
@@ -23,10 +25,11 @@ bind-key -T copy-mode-vi C-c send -X copy-pipe-and-cancel "xsel -i --clipboard"
 
 bind-key tab last-window
 # vi-like movement between panes
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+# -n option make it no prefix key
+bind-key -n M-h select-pane -L
+bind-key -n M-j select-pane -D
+bind-key -n M-k select-pane -U
+bind-key -n M-l select-pane -R
 
 bind-key g split-window -h
 bind-key G split-window
