Misc about tmux/alias

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,6 +31,9 @@ bind-key -n M-j select-pane -D
 bind-key -n M-k select-pane -U
 bind-key -n M-l select-pane -R
 
+bind -n M-H previous-window
+bind -n M-L next-window
+
 bind-key g split-window -h
 bind-key G split-window
 
