--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,30 +1,45 @@
-set -sg escape-time 0
+# set is an alias for set-option
+# bind is an alias for bind-key
 
-# set -g default-terminal "screen-256color"
-set -g default-terminal "xterm-256color"
+# UI
+set -g set-titles on          # set terminal title
+set -g status-position bottom
 
 set -g status-bg black
+# set -g status-bg green
 set -g status-fg white
 
+# KEY
+
+bind Enter copy-mode	    # enter copy mode
+bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+
 # change prefix key
-set-option -g prefix F1
+set -g prefix M-J
+set -g prefix2 F1		# second prefix
 # set-option -g prefix F1
 # set-option -g prefix C-t
 # set-option -g prefix C-v
 
+# 根据 pane 当前的命令来改变按键的行为。这样就尽可能不改变
+bind-key -n C-b if-shell 'test #{pane_current_command} = "emacsclient"' 'send-keys C-b' 'switch-client -T prefix'
+
+set -sg escape-time 0
+set -g default-terminal "screen-256color"
+# set -g default-terminal "xterm-256color"
+
 # mouse and copy to clipboard
 # solution 1
-# set-option -g mouse on
+set-option -g mouse on
 # set-option -s set-clipboard off
 # bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
 # solution 2
 setw -g mode-keys vi
-bind-key b copy-mode
 bind-key B paste-buffer
 bind-key -T copy-mode-vi C-c send -X copy-pipe-and-cancel "xsel -i --clipboard"
 
-bind-key tab last-window
-# vi-like movement between panes
+# bind-key tab last-window
+
 # -n option make it no prefix key
 bind-key -n M-h select-pane -L
 bind-key -n M-j select-pane -D
@@ -34,8 +49,5 @@ bind-key -n M-l select-pane -R
 bind -n M-H previous-window
 bind -n M-L next-window
 
-bind-key g split-window -h
-bind-key G split-window
-
-
-# set-option -g status-position top
+bind-key k split-window -h
+bind-key j split-window
