tmux.conf: 高亮当前 window

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,6 +12,7 @@ set -g status-position bottom
 #set -g status-bg green
 set -g status-bg black
 set -g status-fg white
+set-window-option -g window-status-current-style bg=red
 
 # ALIAS
 set -s command-alias[100] vsp='split -h'
