tmux: 调整 tmux 的 prefix 按键

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,7 +19,6 @@ set -s command-alias[100] vsp='split -h'
 
 # KEY
 bind Enter command-prompt
-bind-key -n M-v copy-mode -u
 
 bind-key k split-window -h -c '#{pane_current_path}'
 bind-key j split-window -c '#{pane_current_path}'
@@ -27,10 +26,16 @@ bind-key j split-window -c '#{pane_current_path}'
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 # 根据 pane 当前的命令来改变按键的行为。这样就尽可能不改变
-bind-key -n C-b if-shell 'test #{pane_current_command} = "emacsclient"' 'send-keys C-b' 'switch-client -T prefix'
+# bind-key -n C-b if-shell 'test #{pane_current_command} = "emacsclient"' 'send-keys C-b' 'switch-client -T prefix'
 
 # CHANGE PREFIX KEY
-#set -g prefix M-J
+# 这里的按键主要都是考虑和 EMACS 中按键的冲突
+# 从 EMACS 中按键的使用来看，M-h 和 M-e 的按键一方面使用频率不是很高
+# 另一方面都可以用 ESC h 和 ESC e 来代替，在按键上不会缺失。所以还算
+# 一个不错的折中。
+set -g prefix M-h
+bind-key M-h send-keys M-h
+set -g prefix2 M-e
 #set -g prefix2 F1		# second prefix
 #set-option -g prefix F1
 #set-option -g prefix C-t
